--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,19 +13,15 @@ services:
       - "3307:3306"
   app:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - ".:/app"
     ports:
-      - "3001:3000"
+      - "8082:8080"
     depends_on:
       - db
     links:
       - db
     environment:
       DB_USER: root
-      DB_NAME: hospital_service_development
       DB_PASSWORD: password
-      DB_HOST: localhost
-      DATABASE_URL: 'mysql2://db'
-      RAILS_ENV: 'development'
+      DB_URL: jdbc:mysql://localhost:3307/hospital_service_development
