--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,13 @@ services:
       MYSQL_HOST: localhost
     ports:
       - "3307:3306"
-  app:
-    build: .
-    volumes:
-      - ".:/app"
+
+  hospital-service:
+    image: docker.io/library/hospital-service:latest
+    container_name: hospital-service
     ports:
       - "8082:8080"
     depends_on:
       - db
     links:
       - db
-    environment:
-      DB_USER: root
-      DB_PASSWORD: password
-      DB_URL: jdbc:mysql://localhost:3307/hospital_service_development
