updated minor changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url = ${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.application.name = hospitalservice
+server.port = 8083
+spring.datasource.url = ${HOSPITAL_MYSQL_URL:jdbc:mysql://mysql:3306/hostpital}
+spring.datasource.username=${HOSPITAL_MYSQL_USERNAME:root}
+spring.datasource.password=${HOSPITAL_MYSQL_PASSWORD:root}
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-server.port = 8083
